--- a/src/style.css
+++ b/src/style.css
@@ -18,16 +18,20 @@ audio{
 .card{
     position: relative;
     display: inline-block;
-    height: 30%;
-    width: 15%;
+    height: 45vh;
+    width: 15vw;
     background-color: cornsilk;
     box-shadow: 5px 5px 7px brown;
     border-radius: 7px;
     justify-content: center;
     margin: 2%;
     padding: 0%;
+    transition: box-shadow 0.3s ease;
 }
-.card_info{
+.card:hover{
+    box-shadow: 10px 10px 15px brown;
+}
+.card_title{
     color: crimson;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
@@ -38,4 +42,14 @@ audio{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     padding: 2%;
+}
+@media(max-width:767px){
+    .card{
+        height: 25vh;
+        width: 25vw;
+        margin-left: 5%;
+    }
+    .card_title{
+        font-size: 2.5vh;
+    }
 }
