--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ audio{
     margin: 2%;
     padding: 0%;
     transition: box-shadow 0.3s ease;
+    cursor: pointer;
 }
 .card:hover{
     box-shadow: 10px 10px 15px brown;
