--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@ img {
 audio{
     filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%) drop-shadow(25%);
     position: relative;
+    margin-left: 5%;
+    width: 90%;
+    background-color: crimson;
+    border-radius: 10%;
+    box-shadow: 5px 5px 7px crimson;
 }
 .card{
     position: relative;
@@ -46,11 +51,11 @@ audio{
 }
 @media(max-width:767px){
     .card{
-        height: 25vh;
-        width: 25vw;
-        margin-left: 5%;
+        height: 70vh;
+        width: 75vw;
+        margin-left: 10%;
     }
     .card_title{
-        font-size: 2.5vh;
+        font-size: 5vh;
     }
 }
